AG-10044 Homepage module dark mode fix

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/FeaturesList.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/FeaturesList.module.scss
@@ -72,6 +72,6 @@
     }
 
     #{$selector-darkmode} & {
-        fill: var(--default-text-color);
+        fill: var(--color-link);
     }
 }
