--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/GridHomepage.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/GridHomepage.module.scss
@@ -340,7 +340,8 @@ gatsby-fast-refresh {
     background-color: var(--color-util-brand-100);
 
     #{$selector-darkmode} & {
-        background-color: var(--color-fg-primary);
+        background-color: var(--color-gray-800);
+      
     }
 }
 
